flux-cd/applications/base-app-config/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: kaiko-assignment
    app.kubernetes.io/tier: application
