flux-cd/applications/base-app-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: kaiko-assignment
  annotations:
    # Prometheus scraping annotations
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
    prometheus.io/scheme: "http"
spec:
  selector:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: kaiko-assignment
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
