flux-cd/applications/base-app-config/networkpolicy-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: kaiko-assignment
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
