flux-cd/applications/base-app-config/networkpolicy-3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-monitoring-namespace
  namespace: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: kaiko-assignment
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: app
      app.kubernetes.io/part-of: kaiko-assignment
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
